[package]
name = "data-cleanser-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
clap = { version = "4.3.5", features = ["derive"] }
encoding_rs = "0.8.32"
futures = "0.3.26"
reqwest = "0.11.14"
scraper = "0.17.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }

